--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,17 +1,13 @@
 phases:
   install:
     commands:
-        - "sudo apt install unzip -y"
-        - "wget https://releases.hashicorp.com/terraform/1.0.5/terraform_1.0.5_linux_amd64.zip"
-        - "unzip terraform_1.0.5_linux_amd64.zip"
-        - "sudo mv terraform /usr/local/bin"    
+        - echo "Install apply build"
     pre-build:
       commands:
-        - terraform init
+        - echo "Pre build apply build"
     build:
       commands:
-        - terraform $TF_COMMAND --auto-approve
         - echo "Post apply build"
     post_build:
       commands:
-        - echo terraform $TF_COMMAND completed on 'date'
+         - echo "Post build apply build"
