--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,13 +1,22 @@
+version: 0.2
+
 phases:
   install:
     commands:
-        - echo "Install apply build"
-    pre-build:
-      commands:
-        - echo "Pre build apply build"
-    build:
-      commands:
-        - echo "Post apply build"
-    post_build:
-      commands:
-        - echo "Post build apply build"
+      - echo Installing Mocha...
+      - npm install -g mocha
+  pre_build:
+    commands:
+      - echo Installing source NPM dependencies...
+      - npm install unit.js
+  build:
+    commands:
+      - echo Build started on `date`
+      - echo Compiling the Node.js code
+      - mocha HelloWorld.js
+  post_build:
+    commands:
+      - echo Build completed on `date`
+artifacts:
+  files:
+    - HelloWorld.js
