--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,18 +3,20 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo Installing Mocha...
-      - npm install -g mocha
+      - echo Installing install mode...
+      - apt install unzip -y
+      - wget https://releases.hashicorp.com/terraform/1.0.5/terraform_1.0.5_linux_amd64.zip"
+      - unzip terraform_1.0.5_linux_amd64.zip
+      - sudo mv terraform /usr/local/bin    
   pre_build:
     commands:
       - echo Installing source NPM dependencies...
-      - npm install unit.js
+      
   build:
     commands:
-      - echo Build started on `date`
-      - echo Compiling the Node.js code
-      - mocha HelloWorld.js
+      - echo Build started on 'date'
+      
   post_build:
     commands:
-      - echo Build completed on `date`
+      - echo Build completed on 'date'
 
