--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,7 +5,7 @@ phases:
     commands:
       - echo Installing install mode...
       - apt install unzip -y
-      - wget https://releases.hashicorp.com/terraform/1.0.5/terraform_1.0.5_linux_amd64.zip"
+      - wget https://releases.hashicorp.com/terraform/1.0.5/terraform_1.0.5_linux_amd64.zip
       - unzip terraform_1.0.5_linux_amd64.zip
       - sudo mv terraform /usr/local/bin    
   pre_build:
