--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -16,7 +16,7 @@ phases:
   build:
     commands:
       - echo Build started on 'date'
-      - terraform $TF_COMMAND --auto-approve
+      - terraform apply --auto-approve
       
   post_build:
     commands:
